--- a/testbeds/vmware/vars/kubernetes/configs/prme-1x3-2x2-3x2-7x2-8x2-9x2.yml
+++ b/testbeds/vmware/vars/kubernetes/configs/prme-1x3-2x2-3x2-7x2-8x2-9x2.yml
@@ -1,5 +1,50 @@
 ---
 
+master:
+  prme_id: 1
+  vm_id: 120
+
+nodes:
+  prme1-k8s-node-120:
+    type: "master:minion"
+    master: "{{ master }}"
+  prme1-k8s-node-121:
+    type: "minion"
+    master: "{{ master }}"
+  prme1-k8s-node-122:
+    type: "minion"
+    master: "{{ master }}"
+  prme2-k8s-node-120:
+    type: "minion"
+    master: "{{ master }}"
+  prme2-k8s-node-121:
+    type: "minion"
+    master: "{{ master }}"
+  prme3-k8s-node-120:
+    type: "minion"
+    master: "{{ master }}"
+  prme3-k8s-node-121:
+    type: "minion"
+    master: "{{ master }}"
+  prme7-k8s-node-120:
+    type: "minion"
+    master: "{{ master }}"
+  prme7-k8s-node-121:
+    type: "minion"
+    master: "{{ master }}"
+  prme8-k8s-node-120:
+    type: "minion"
+    master: "{{ master }}"
+  prme8-k8s-node-121:
+    type: "minion"
+    master: "{{ master }}"
+  prme9-k8s-node-120:
+    type: "minion"
+    master: "{{ master }}"
+  prme9-k8s-node-121:
+    type: "minion"
+    master: "{{ master }}"
+
 networking:
   prme1-k8s-node-120:
     remote_nodes:
