--- a/testbeds/vmware/vars/proxmox/main.yml
+++ b/testbeds/vmware/vars/proxmox/main.yml
@@ -2,4 +2,4 @@
 
 network: tor_network # Options: tor_network, vmware_switch
 
-configs: prme-1x1-2x1-3x1-7,8,9xnone
+configs: prme-1x1-2x1-3x1-7x1-8x1-9x1
