--- a/testbeds/vmware/vars/proxmox_dc/main.yml
+++ b/testbeds/vmware/vars/proxmox_dc/main.yml
@@ -3,7 +3,7 @@
 dc_switch:
   type: "pisces" # Options: linux_bridge, ovs_dpdk, pisces
   pisces:
-    p4_program: "baseerat.p4"
+    p4_program: "baseerat_sr.p4"
     flow_rules: # Also, see defaults/main.yml for eths' if_indexes.
       prme-nsx-perf-005:
         - "table=0,priority=10,ipv4__dstAddr=0xAC108C9E actions=1" # to prme-nsx-perf-001
