--- a/testbeds/vmware/roles/proxmox/tasks/main.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/main.yml
@@ -8,13 +8,13 @@
   include: roles/proxmox/tasks/vms/template/remove.yml
   tags: remove_template
 
-- name: create overlay network
-  include: roles/proxmox/tasks/networking/overlay/create.yml
-  tags: create_overlay
+- name: setup overlay network
+  include: roles/proxmox/tasks/networking/overlay/setup.yml
+  tags: setup_overlay
 
-- name: destroy overlay network
-  include: roles/proxmox/tasks/networking/overlay/destroy.yml
-  tags: destroy_overlay
+- name: cleanup overlay network
+  include: roles/proxmox/tasks/networking/overlay/cleanup.yml
+  tags: cleanup_overlay
 
 - name: create VMs
   include: roles/proxmox/tasks/vms/create.yml
