--- a/testbeds/vmware/roles/proxmox/tasks/networking/others/br0_as_gateway_bridge/cleanup.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/others/br0_as_gateway_bridge/cleanup.yml
@@ -1,21 +1,5 @@
 ---
 
-- name: remove tap interfaces from br0
-  shell: ovs-vsctl del-port br0 tap{{ item }}i0
-  with_items: "{{ nodes[inventory_hostname]['vm_ids'] }}"
-
-- name: add tap interfaces to vmbr0
-  shell: brctl addif vmbr0 tap{{ item }}i0
-  with_items: "{{ nodes[inventory_hostname]['vm_ids'] }}"
-
-- name: remove gateway address from br0
-  shell: ip addr del {{ proxmox_vm_network_address_prefix }}{{ nodes[inventory_hostname]['prme_id'] }}.1/24 dev br0
-
-- name: add gateway address to vmbr0
-  shell: ip addr add {{ proxmox_vm_network_address_prefix }}{{ nodes[inventory_hostname]['prme_id'] }}.1/24 dev vmbr0
-
-- name: add static route for overlay traffic to vmbr0
-  shell: ip route add {{ proxmox_vm_network_address_prefix }}0.0/16 dev vmbr0
-
-- name: add br0 to vmbr0
-  shell: brctl addif vmbr0 br0
+- name: cleanup ovs (kernel) as gateway bridge
+  include: roles/proxmox/tasks/networking/others/br0_as_gateway_bridge/switches/ovs_kernel/cleanup.yml
+  when: 'overlay_switch.bridge.type == "ovs_kernel"'
