--- a/testbeds/vmware/roles/baseerat/defaults/main.yml
+++ b/testbeds/vmware/roles/baseerat/defaults/main.yml
@@ -7,4 +7,6 @@ baseerat_interfaces:
   prme-nsx-perf-001: 1
   prme-nsx-perf-002: 1
   prme-nsx-perf-003: 1
-
+  prme-nsx-perf-007: 1
+  prme-nsx-perf-008: 1
+  prme-nsx-perf-009: 1
