--- a/testbeds/vmware/roles/proxmox/tasks/networking/overlay/switches/ovs_kernel/add_tunnel.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/overlay/switches/ovs_kernel/add_tunnel.yml
@@ -10,3 +10,6 @@
     port: "{{ proxmox_overlay_tunnel_type }}_{{ remote_node.prme_id }}"
     state: present
     set: interface {{ proxmox_overlay_tunnel_type }}_{{ remote_node.prme_id }} type={{ proxmox_overlay_tunnel_type }} options:remote_ip={{ hostvars[remote_hostname][remote_interface].ipv4.address }}
+
+- name: set interface ofport number
+  shell: ovs-vsctl set interface {{ proxmox_overlay_tunnel_type }}_{{ remote_node.prme_id }} ofport_request={{ remote_node.prme_id }}
