--- a/testbeds/vmware/roles/proxmox/tasks/main.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/main.yml
@@ -32,10 +32,18 @@
   with_items: "{{ nodes[inventory_hostname]['vm_ids'] }}"
   tags: destroy_vms
 
-- name: setup br0 as gateway bridge
-  include: roles/proxmox/tasks/networking/others/br0_as_gateway_bridge/setup.yml
-  tags: setup_br0_as_primary_bridge
+#- name: setup br0 as gateway bridge
+#  include: roles/proxmox/tasks/networking/others/br0_as_gateway_bridge/setup.yml
+#  tags: setup_br0_as_primary_bridge
+#
+#- name: cleanup br0 as gateway bridge
+#  include: roles/proxmox/tasks/networking/others/br0_as_gateway_bridge/cleanup.yml
+#  tags: cleanup_br0_as_primary_bridge
 
-- name: cleanup br0 as gateway bridge
-  include: roles/proxmox/tasks/networking/others/br0_as_gateway_bridge/cleanup.yml
-  tags: cleanup_br0_as_primary_bridge
+- name: add br0 flow rules
+  include: roles/proxmox/tasks/networking/others/br0_add_flow_rules/setup.yml
+  tags: add_br0_flow_rules
+
+- name: remove br0 flow rules
+  include: roles/proxmox/tasks/networking/others/br0_add_flow_rules/cleanup.yml
+  tags: remove_br0_flow_rules
