--- a/testbeds/vmware/roles/baseerat/tasks/setup.yml
+++ b/testbeds/vmware/roles/baseerat/tasks/setup.yml
@@ -1,10 +1,13 @@
 ---
 
-- name: create and bring up dummy interface group0
-  shell: ip link add name group0 type dummy; ip link set dev group0 up
+- name: add static arp entry
+  shell: arp -s {{ baseerat_ip_address }} {{ baseerat_mac_address }}
 
-- name: add {{ baseerat_address }}/32 to group0
-  shell: ip addr add {{ baseerat_address }}/32 dev group0
+#- name: create and bring up dummy interface group0
+#  shell: ip link add name group0 type dummy; ip link set dev group0 up
+#
+#- name: add {{ baseerat_address }}/32 to group0
+#  shell: ip addr add {{ baseerat_address }}/32 dev group0
 
 - name: add flow rule for intercepting baseerat packets at br0
-  shell: ovs-ofctl add-flow br0 "udp,nw_dst={{ baseerat_address }},tp_dst={{ baseerat_port }} actions=output:{{ baseerat_interfaces[inventory_hostname] }}"
+  shell: ovs-ofctl add-flow br0 "udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }} actions=output:{{ baseerat_interfaces[inventory_hostname] }}"
