--- a/testbeds/vmware/vars/proxmox/main.yml
+++ b/testbeds/vmware/vars/proxmox/main.yml
@@ -1,6 +1,6 @@
 ---
 
-network: vmware_switch # Options: tor_network, vmware_switch
+network: tor_network # Options: tor_network, vmware_switch
 
 configs: prme-1x1-2x1-3x1-7x1-8x1-9x1
 
