--- a/testbeds/vmware/vars/proxmox/network/vmware_switch.yml
+++ b/testbeds/vmware/vars/proxmox/network/vmware_switch.yml
@@ -4,72 +4,72 @@ networking:
   prme-nsx-perf-001:
     remote_nodes:
       - prme_id: 2
-        interface: eth7
+        interface: eth5
       - prme_id: 3
-        interface: eth7
-      - prme_id: 7
-        interface: eth6
-      - prme_id: 8
-        interface: eth6
-      - prme_id: 9
-        interface: eth6
+        interface: eth5
+#      - prme_id: 7
+#        interface: eth6
+#      - prme_id: 8
+#        interface: eth6
+#      - prme_id: 9
+#        interface: eth6
   prme-nsx-perf-002:
     remote_nodes:
       - prme_id: 1
-        interface: eth7
+        interface: eth5
       - prme_id: 3
-        interface: eth7
-      - prme_id: 7
-        interface: eth6
-      - prme_id: 8
-        interface: eth6
-      - prme_id: 9
-        interface: eth6
+        interface: eth5
+#      - prme_id: 7
+#        interface: eth6
+#      - prme_id: 8
+#        interface: eth6
+#      - prme_id: 9
+#        interface: eth6
   prme-nsx-perf-003:
     remote_nodes:
       - prme_id: 1
-        interface: eth7
+        interface: eth5
       - prme_id: 2
-        interface: eth7
-      - prme_id: 7
-        interface: eth6
-      - prme_id: 8
-        interface: eth6
-      - prme_id: 9
-        interface: eth6
-  prme-nsx-perf-007:
-    remote_nodes:
-      - prme_id: 1
-        interface: eth7
-      - prme_id: 2
-        interface: eth7
-      - prme_id: 3
-        interface: eth7
-      - prme_id: 8
-        interface: eth6
-      - prme_id: 9
-        interface: eth6
-  prme-nsx-perf-008:
-    remote_nodes:
-      - prme_id: 1
-        interface: eth7
-      - prme_id: 2
-        interface: eth7
-      - prme_id: 3
-        interface: eth7
-      - prme_id: 7
-        interface: eth6
-      - prme_id: 9
-        interface: eth6
-  prme-nsx-perf-009:
-    remote_nodes:
-      - prme_id: 1
-        interface: eth7
-      - prme_id: 2
-        interface: eth7
-      - prme_id: 3
-        interface: eth7
-      - prme_id: 7
-        interface: eth6
-      - prme_id: 8
-        interface: eth6
+        interface: eth5
+#      - prme_id: 7
+#        interface: eth6
+#      - prme_id: 8
+#        interface: eth6
+#      - prme_id: 9
+#        interface: eth6
+#  prme-nsx-perf-007:
+#    remote_nodes:
+#      - prme_id: 1
+#        interface: eth7
+#      - prme_id: 2
+#        interface: eth7
+#      - prme_id: 3
+#        interface: eth7
+#      - prme_id: 8
+#        interface: eth6
+#      - prme_id: 9
+#        interface: eth6
+#  prme-nsx-perf-008:
+#    remote_nodes:
+#      - prme_id: 1
+#        interface: eth7
+#      - prme_id: 2
+#        interface: eth7
+#      - prme_id: 3
+#        interface: eth7
+#      - prme_id: 7
+#        interface: eth6
+#      - prme_id: 9
+#        interface: eth6
+#  prme-nsx-perf-009:
+#    remote_nodes:
+#      - prme_id: 1
+#        interface: eth7
+#      - prme_id: 2
+#        interface: eth7
+#      - prme_id: 3
+#        interface: eth7
+#      - prme_id: 7
+#        interface: eth6
+#      - prme_id: 8
+#        interface: eth6
