--- a/testbeds/vmware/roles/proxmox/tasks/hosts/setup.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/hosts/setup.yml
@@ -11,13 +11,8 @@
     update_cache: yes
   ignore_errors: yes
 
-- name: install vim
-  apt:
-    name: vim
-
-- name: install lshw
-  apt:
-    name: lshw
+- name: install essential utilities
+  shell: apt-get -y install tmux unzip git python-pip python-yaml python-setuptools build-essential dh-autoreconf pve-headers-`uname -r`
 
 - name: update .bashrc file
   template:
