--- a/testbeds/vmware/vars/proxmox/main.yml
+++ b/testbeds/vmware/vars/proxmox/main.yml
@@ -2,7 +2,7 @@
 
 network: vmware_switch # Options: tor_network, vmware_switch
 
-configs: prme-1x1-2x1-3x1-7x1-8x1-9x1
+configs: prme-1x1-2x1-3x1-7,8,9xnone
 
 overlay_switch:
   type: ovs_kernel # Options: ovs_kernel
