--- a/testbeds/vmware/roles/proxmox/tasks/hosts/setup.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/hosts/setup.yml
@@ -12,7 +12,7 @@
   ignore_errors: yes
 
 - name: install essential utilities
-  shell: apt-get -y install tmux unzip git python-pip python-yaml python-setuptools build-essential dh-autoreconf pve-headers-`uname -r`
+  shell: apt-get -y install htop tmux unzip git python-pip python-yaml python-setuptools build-essential dh-autoreconf pve-headers-`uname -r`
 
 - name: update .bashrc file
   template:
