--- a/testbeds/vmware/roles/proxmox/tasks/main.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/main.yml
@@ -16,13 +16,13 @@
   include: roles/proxmox/tasks/vms/template/remove.yml
   tags: remove_template
 
-- name: install ovs_dpdk
-  include: roles/proxmox/tasks/networking/overlay/switches/ovs_dpdk/build/setup.yml
-  tags: install_ovs_dpdk
+- name: install pisces
+  include: roles/proxmox/tasks/networking/overlay/switches/pisces/build/setup.yml
+  tags: install_pisces
 
-- name: clean ovs_dpdk
-  include: roles/proxmox/tasks/networking/overlay/switches/ovs_dpdk/build/cleanup.yml
-  tags: clean_ovs_dpdk
+- name: clean pisces
+  include: roles/proxmox/tasks/networking/overlay/switches/pisces/build/cleanup.yml
+  tags: clean_pisces
 
 - name: setup overlay network
   include: roles/proxmox/tasks/networking/overlay/setup.yml
@@ -48,11 +48,11 @@
   with_items: "{{ nodes[inventory_hostname]['vm_ids'] }}"
   tags: destroy_vms
 
-#- name: setup br0 as gateway bridge
+#- name: setup br0 as gateway bridge (deprecated)
 #  include: roles/proxmox/tasks/networking/others/br0_as_gateway_bridge/setup.yml
 #  tags: setup_br0_as_primary_bridge
 #
-#- name: cleanup br0 as gateway bridge
+#- name: cleanup br0 as gateway bridge (deprecated)
 #  include: roles/proxmox/tasks/networking/others/br0_as_gateway_bridge/cleanup.yml
 #  tags: cleanup_br0_as_primary_bridge
 
