--- a/testbeds/vmware/roles/proxmox/tasks/networking/overlay/cleanup.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/overlay/cleanup.yml
@@ -3,14 +3,10 @@
 - name: remove iptables rule to filter traffic coming from eth0 belonging to the overlay subnet
   shell: iptables -D INPUT -s {{ proxmox_vm_network_address_prefix }}0.0/16 -i eth0 -j DROP
 
-#- name: cleanup pisces
-#  include: roles/proxmox_tor/tasks/networking/switches/pisces/cleanup.yml
-#  when: 'tor_switch.type == "pisces"'
+- name: cleanup pisces
+  include: roles/proxmox/tasks/networking/overlay/switches/pisces/cleanup.yml
+  when: 'overlay_switch.type == "pisces"'
 
 - name: cleanup ovs (kernel)
   include: roles/proxmox/tasks/networking/overlay/switches/ovs_kernel/cleanup.yml
   when: 'overlay_switch.type == "ovs_kernel"'
-
-#- name: cleanup ovs (dpdk)
-#  include: roles/proxmox_tor/tasks/networking/switches/ovs_dpdk/cleanup.yml
-#  when: 'tor_switch.type == "ovs_dpdk"'
