--- a/testbeds/vmware/roles/proxmox/tasks/networking/overlay/setup.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/overlay/setup.yml
@@ -1,16 +1,12 @@
 ---
 
-#- name: setup pisces
-#  include: roles/proxmox_tor/tasks/networking/switches/pisces/setup.yml
-#  when: 'tor_switch.type == "pisces"'
+- name: setup pisces
+  include: roles/proxmox/tasks/networking/overlay/switches/pisces/setup.yml
+  when: 'overlay_switch.type == "pisces"'
 
 - name: setup ovs (kernel)
   include: roles/proxmox/tasks/networking/overlay/switches/ovs_kernel/setup.yml
   when: 'overlay_switch.type == "ovs_kernel"'
-
-#- name: setup ovs (dpdk)
-#  include: roles/proxmox_tor/tasks/networking/switches/ovs_dpdk/setup.yml
-#  when: 'tor_switch.type == "ovs_dpdk"'
 
 - name: add iptables rule to filter traffic coming from eth0 belonging to the overlay subnet
   shell: iptables -I INPUT -s {{ proxmox_vm_network_address_prefix }}0.0/16 -i eth0 -j DROP
