--- a/testbeds/vmware/vars/proxmox/main.yml
+++ b/testbeds/vmware/vars/proxmox/main.yml
@@ -5,6 +5,10 @@ network: vmware_switch # Options: tor_network, vmware_switch
 configs: prme-1x1-2x1-3x1-7,8,9xnone
 
 overlay_switch:
-  type: ovs_kernel # Options: ovs_kernel
+  type: pisces # Options: ovs_kernel, pisces
   bridge:
-    type: ovs_kernel # Options: ovs_kernel
+    type: pisces # Options: ovs_kernel, pisces
+
+  pisces:
+    p4_program: "simple_router.p4"
+
