--- a/testbeds/vmware/roles/proxmox/tasks/networking/overlay/switches/pisces/setup.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/overlay/switches/pisces/setup.yml
@@ -44,3 +44,5 @@
 
 - name: add static route for overlay traffic
   shell: ip route add {{ proxmox_vm_network_address_prefix }}0.0/16 dev vmbr0
+
+# Note: run br0_add_flow_rules to enable connectivity
