--- a/testbeds/vmware/roles/baseerat/tasks/cleanup.yml
+++ b/testbeds/vmware/roles/baseerat/tasks/cleanup.yml
@@ -2,6 +2,7 @@
 
 - name: remove static arp entry
   shell: arp -d {{ baseerat_ip_address }}
+  when: 'inventory_hostname == "prme-nsx-perf-001"'
 
 #- name: remove {{ baseerat_address }}/32 from group0
 #  shell: ip addr del {{ baseerat_address }}/32 dev group0
@@ -10,4 +11,13 @@
 #  shell: ip link del dev group0
 
 - name: delete flow rule for intercepting baseerat packets at br0
-  shell: ovs-ofctl del-flows br0 "udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}"
+  shell: ovs-ofctl del-flows br0 "table=0,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}"
+  when: 'inventory_hostname == "prme-nsx-perf-001"'
+
+- name: delete flow rule for intercepting baseerat packets at br0
+  shell: ovs-ofctl del-flows br0 "table=0,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}"
+  when: 'inventory_hostname == "prme-nsx-perf-002"'
+
+- name: delete flow rule for intercepting baseerat packets at br0
+  shell: ovs-ofctl del-flows br0 "table=0,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}"
+  when: 'inventory_hostname == "prme-nsx-perf-003"'
