--- a/testbeds/vmware/roles/baseerat/tasks/setup.yml
+++ b/testbeds/vmware/roles/baseerat/tasks/setup.yml
@@ -1,18 +1,22 @@
 ---
 
-- name: add static arp entry
-  shell: arp -s {{ baseerat_ip_address }} {{ baseerat_mac_address }}
+- name: add flow rules for group0 in br0
+  shell: ip netns add groups;
+         ip link add group0i0 type veth peer name group0i1;
+         ip link set group0i1 netns groups;
+         ip netns exec groups ifconfig group0i1 {{ baseerat_ip_address }}/24 up;
+         ip netns exec groups ip route add {{ baseerat_gw_address_prefix }}{{ prme_id }}/24 dev group0i1;
+         ifconfig group0i0 up;
+         ovs-vsctl add-port br0 group0i0;
+         ovs-vsctl set interface group0i0 ofport_request=10;
+         ovs-ofctl add-flow br0 "table=0,priority=0,arp,arp_tpa={{ baseerat_ip_address }} actions=output:10";
+         ovs-ofctl add-flow br0 "table=0,priority=0,ip,nw_dst={{ baseerat_ip_address }} actions=output:10"
   when: 'inventory_hostname == "prme-nsx-perf-001"'
 
-#- name: create and bring up dummy interface group0
-#  shell: ip link add name group0 type dummy; ip link set dev group0 up
-#
-#- name: add {{ baseerat_address }}/32 to group0
-#  shell: ip addr add {{ baseerat_address }}/32 dev group0
 
 - name: add flow rule for intercepting baseerat packets at br0
   shell: ovs-ofctl add-flow br0 "table=0,priority=10,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}
-                   actions=set_tunnel:0x1E2234,output:{{ baseerat_interfaces[inventory_hostname] }}"
+                   actions=set_tunnel:{{ baseerat_bitmap }},output:{{ baseerat_interfaces[inventory_hostname] }}"
   when: 'inventory_hostname == "prme-nsx-perf-001"'
 
 - name: add flow rule for intercepting baseerat packets at br0
