--- a/testbeds/vmware/roles/baseerat/tasks/cleanup.yml
+++ b/testbeds/vmware/roles/baseerat/tasks/cleanup.yml
@@ -1,32 +1,15 @@
 ---
 
 - name: delete flow rules for group0 in br0
-  shell: ovs-ofctl del-flows br0 "table=0,arp,arp_tpa={{ baseerat_ip_address }}";
-         ovs-ofctl del-flows br0 "table=0,ip,nw_dst={{ baseerat_ip_address }}";
+  shell: ovs-ofctl del-flows br0 "table=0,in_port=local,arp,arp_tpa={{ baseerat_ip_address }}";
+         ovs-ofctl del-flows br0 "table=0,in_port=local,ip,nw_dst={{ baseerat_ip_address }}";
          ovs-vsctl del-port br0 group0;
          ip netns del groups
-  when: 'inventory_hostname == "prme-nsx-perf-001"'
+  when: 'inventory_hostname in baseerat_bitmaps'
 
-- name: delete flow rule for intercepting baseerat packets at br0
-  shell: ovs-ofctl del-flows br0 "table=0,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}"
-  when: 'inventory_hostname == "prme-nsx-perf-001"'
+- name: delete flow rule for intercepting baseerat packets to egress at br0
+  shell: ovs-ofctl del-flows br0 "table=0,in_port=local,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}"
+  when: 'inventory_hostname in baseerat_bitmaps'
 
-- name: delete flow rule for intercepting baseerat packets at br0
+- name: delete flow rule for intercepting baseerat packets from egress at br0
   shell: ovs-ofctl del-flows br0 "table=0,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}"
-  when: 'inventory_hostname == "prme-nsx-perf-002"'
-
-- name: delete flow rule for intercepting baseerat packets at br0
-  shell: ovs-ofctl del-flows br0 "table=0,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}"
-  when: 'inventory_hostname == "prme-nsx-perf-003"'
-
-- name: delete flow rule for intercepting baseerat packets at br0
-  shell: ovs-ofctl del-flows br0 "table=0,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}"
-  when: 'inventory_hostname == "prme-nsx-perf-007"'
-
-- name: delete flow rule for intercepting baseerat packets at br0
-  shell: ovs-ofctl del-flows br0 "table=0,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}"
-  when: 'inventory_hostname == "prme-nsx-perf-008"'
-
-- name: delete flow rule for intercepting baseerat packets at br0
-  shell: ovs-ofctl del-flows br0 "table=0,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}"
-  when: 'inventory_hostname == "prme-nsx-perf-009"'
