--- a/testbeds/vmware/roles/baseerat/tasks/setup.yml
+++ b/testbeds/vmware/roles/baseerat/tasks/setup.yml
@@ -9,37 +9,16 @@
          ifconfig group0i0 up;
          ovs-vsctl add-port br0 group0i0;
          ovs-vsctl set interface group0i0 ofport_request=10;
-         ovs-ofctl add-flow br0 "table=0,priority=0,arp,arp_tpa={{ baseerat_ip_address }} actions=output:10";
-         ovs-ofctl add-flow br0 "table=0,priority=0,ip,nw_dst={{ baseerat_ip_address }} actions=output:10"
-  when: 'inventory_hostname == "prme-nsx-perf-001"'
+         ovs-ofctl add-flow br0 "table=0,priority=10,in_port=local,arp,arp_tpa={{ baseerat_ip_address }} actions=output:10";
+         ovs-ofctl add-flow br0 "table=0,priority=10,in_port=local,ip,nw_dst={{ baseerat_ip_address }} actions=output:10"
+  when: 'inventory_hostname in baseerat_bitmaps'
 
+- name: add flow rules for intercepting baseerat packets to egress at br0
+  shell: ovs-ofctl add-flow br0 "table=0,priority=20,in_port=local,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}
+                   actions=set_tunnel:{{ baseerat_bitmaps[inventory_hostname] }},output:{{ baseerat_interfaces[inventory_hostname] }}"
+  when: 'inventory_hostname in baseerat_bitmaps'
 
-- name: add flow rule for intercepting baseerat packets at br0
-  shell: ovs-ofctl add-flow br0 "table=0,priority=10,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}
-                   actions=set_tunnel:{{ baseerat_bitmap }},output:{{ baseerat_interfaces[inventory_hostname] }}"
-  when: 'inventory_hostname == "prme-nsx-perf-001"'
+- name: add flow rules for intercepting baseerat packets from egress at br0
+  shell: ovs-ofctl add-flow br0 "table=0,priority=20,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}
+                   actions=set_field:192.168.{{ prme_id }}.120->nw_dst,output:local"
 
-- name: add flow rule for intercepting baseerat packets at br0
-  shell: ovs-ofctl add-flow br0 "table=0,priority=10,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}
-                   actions=set_field:192.168.2.120->nw_dst,output:local"
-  when: 'inventory_hostname == "prme-nsx-perf-002"'
-
-- name: add flow rule for intercepting baseerat packets at br0
-  shell: ovs-ofctl add-flow br0 "table=0,priority=10,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}
-                   actions=set_field:192.168.3.120->nw_dst,output:local"
-  when: 'inventory_hostname == "prme-nsx-perf-003"'
-
-- name: add flow rule for intercepting baseerat packets at br0
-  shell: ovs-ofctl add-flow br0 "table=0,priority=10,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}
-                   actions=set_field:192.168.7.120->nw_dst,output:local"
-  when: 'inventory_hostname == "prme-nsx-perf-007"'
-
-- name: add flow rule for intercepting baseerat packets at br0
-  shell: ovs-ofctl add-flow br0 "table=0,priority=10,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}
-                   actions=set_field:192.168.8.120->nw_dst,output:local"
-  when: 'inventory_hostname == "prme-nsx-perf-008"'
-
-- name: add flow rule for intercepting baseerat packets at br0
-  shell: ovs-ofctl add-flow br0 "table=0,priority=10,udp,nw_dst={{ baseerat_ip_address }},tp_dst={{ baseerat_port }}
-                   actions=set_field:192.168.9.120->nw_dst,output:local"
-  when: 'inventory_hostname == "prme-nsx-perf-009"'
