--- a/testbeds/vmware/roles/baseerat/defaults/main.yml
+++ b/testbeds/vmware/roles/baseerat/defaults/main.yml
@@ -14,10 +14,10 @@ baseerat_interfaces:
   prme-nsx-perf-009: 1
 
 baseerat_bitmaps:
-  prme-nsx-perf-001: 0x1E2237
+  prme-nsx-perf-001: 0x122030
 #  prme-nsx-perf-002: 0x122030
 #  prme-nsx-perf-003: 0x122030
-#  prme-nsx-perf-007: 0x122030
+  prme-nsx-perf-007: 0x122030
 #  prme-nsx-perf-008: 0x122030
 #  prme-nsx-perf-009: 0x122030
 
