--- a/testbeds/vmware/inventory.ini
+++ b/testbeds/vmware/inventory.ini
@@ -1,11 +1,11 @@
 [proxmox-nodes]
-prme-nsx-perf-001
-prme-nsx-perf-002
-prme-nsx-perf-003
-prme-nsx-perf-004
-prme-nsx-perf-005
-prme-nsx-perf-006
-prme-nsx-perf-007
-prme-nsx-perf-008
-prme-nsx-perf-009
+prme-nsx-perf-001 prme_id=1
+prme-nsx-perf-002 prme_id=2
+prme-nsx-perf-003 prme_id=3
+prme-nsx-perf-004 prme_id=4
+prme-nsx-perf-005 prme_id=5
+prme-nsx-perf-006 prme_id=6
+prme-nsx-perf-007 prme_id=7
+prme-nsx-perf-008 prme_id=8
+prme-nsx-perf-009 prme_id=9
 
