--- a/testbeds/vmware/roles/baseerat/defaults/main.yml
+++ b/testbeds/vmware/roles/baseerat/defaults/main.yml
@@ -13,28 +13,28 @@ baseerat_gw_address_prefix: 192.168.
 baseerat_groups:
   - address: 192.168.200.200
     port: 12345
-  - address: 192.168.200.201
-    port: 12346
-  - address: 192.168.200.202
-    port: 12347
+#  - address: 192.168.200.201
+#    port: 12346
+#  - address: 192.168.200.202
+#    port: 12347
 
 baseerat_bitmaps:
   prme-nsx-perf-001:
     '192.168.200.200':
       12345: 0x122030
-    '192.168.200.201':
-      12346: 0x142030
-    '192.168.200.202':
-      12347: 0x182232
+#    '192.168.200.201':
+#      12346: 0x142030
+#    '192.168.200.202':
+#      12347: 0x182232
 #  prme-nsx-perf-002: 0x122030
 #  prme-nsx-perf-003: 0x122030
-  prme-nsx-perf-007:
-    '192.168.200.200':
-      12345: 0x182132
-    '192.168.200.201':
-      12346: 0x182134
-    '192.168.200.202':
-      12347: 0x122030
+#  prme-nsx-perf-007:
+#    '192.168.200.200':
+#      12345: 0x182132
+#    '192.168.200.201':
+#      12346: 0x182134
+#    '192.168.200.202':
+#      12347: 0x122030
 #  prme-nsx-perf-008: 0x122030
 #  prme-nsx-perf-009: 0x122030
 
