--- a/apps/vmware/roles/sflow/tasks/sflow/setup.yml
+++ b/apps/vmware/roles/sflow/tasks/sflow/setup.yml
@@ -37,3 +37,11 @@
     state: started
   when: 'inventory_hostname in "prme1-k8s-node-120"'
   become: true
+
+- name: start sflowtrend docker
+  shell: docker run --name=sflowtrend -p 12345:6343/udp -p 8087:8087 -p 8443:8443 sflow/sflowtrend &
+  when: 'inventory_hostname in "prme2-k8s-node-120" or
+         inventory_hostname in "prme3-k8s-node-120" or
+         inventory_hostname in "prme7-k8s-node-120" or
+         inventory_hostname in "prme8-k8s-node-120"'
+  become: true
