--- a/apps/vmware/roles/sflow/defaults/main.yml
+++ b/apps/vmware/roles/sflow/defaults/main.yml
@@ -4,3 +4,6 @@ docker_apt_key_id: "58118E89F3A912897C070ADBF76221572C52609D"
 docker_apt_keyserver: "hkp://pgp.mit.edu:80"
 docker_apt_repo: "deb https://apt.dockerproject.org/repo ubuntu-trusty main"
 docker_compose_url: "https://github.com/docker/compose/releases/download/1.5.2/docker-compose-Linux-x86_64"
+
+sflow_analyst_host: root@128.112.168.28 # hostname requires ssh_config file on the host, will use IP instead
+sflow_analyst_path: /root/mshahbaz/notebooks/baseerat/vmware/results
