--- a/apps/vmware/roles/sflow/tasks/sflow/collect.yml
+++ b/apps/vmware/roles/sflow/tasks/sflow/collect.yml
@@ -7,7 +7,7 @@
   delegate_to: "prme-nsx-perf-001"
 
 - name: create directory with date and time
-  shell: ssh {{ sflow_analyst_host }} mkdir -p {{ sflow_analyst_path }}/sflow/{{ current_date_time.stdout }}
+  shell: ssh {{ sflow_analyst_host }} mkdir -p {{ sflow_analyst_path }}/apps/sflow/{{ current_date_time.stdout }}
   when: 'inventory_hostname in "prme1-k8s-node-120"'
   delegate_to: "prme-nsx-perf-001"
 
@@ -17,7 +17,7 @@
   delegate_to: "prme-nsx-perf-001"
 
 - name: fetch sflow stats to analyst host
-  shell: scp -r /tmp/sflow_stats__* {{ sflow_analyst_host }}:{{ sflow_analyst_path }}/sflow/{{ current_date_time.stdout }}
+  shell: scp -r /tmp/sflow_stats__* {{ sflow_analyst_host }}:{{ sflow_analyst_path }}/apps/sflow/{{ current_date_time.stdout }}
   when: 'inventory_hostname in "prme1-k8s-node-120"'
   delegate_to: "prme-nsx-perf-001"
 
@@ -25,3 +25,8 @@
   shell: cd /tmp; rm -rf sflow_stats__*
   when: 'inventory_hostname in "prme1-k8s-node-120"'
   become: true
+
+- name: cleanup sflow stats on the host
+  shell: cd /tmp; rm -rf sflow_stats__*
+  when: 'inventory_hostname in "prme1-k8s-node-120"'
+  delegate_to: "prme-nsx-perf-001"
