--- a/apps/vmware/vars/zeromq_vms/configs/fanout/zeromq-1x1-2x1-3x1-7,8,9xnone.yml
+++ b/apps/vmware/vars/zeromq_vms/configs/fanout/zeromq-1x1-2x1-3x1-7,8,9xnone.yml
@@ -6,7 +6,7 @@ fanout_pub:
 
 fanout_pub_scheme:
 #  type: "baseerat" # type options: baseerat, unicast
-  type: "unicast"
+  type: "baseerat"
   baseerat:
     address: 192.168.200.200
     port: 12345
