--- a/apps/vmware/roles/zeromq_vms/tasks/fanout/collect.yml
+++ b/apps/vmware/roles/zeromq_vms/tasks/fanout/collect.yml
@@ -3,30 +3,30 @@
 - name: get current date and time
   shell: 'date "+%Y%m%d%H%M%S.%6N"'
   register: current_date_time
-  when: '"prme2-k8s-node-120" == inventory_hostname'
+  when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
   delegate_to: "{{ fanout_pubsub_nodes[inventory_hostname].host }}"
 
 - name: create directory with date and time
   shell: ssh {{ pubsub_analyst_host }} mkdir -p {{ pubsub_analyst_path }}/apps/pub/vms/fanout/{{ current_date_time.stdout }}
-  when: '"prme2-k8s-node-120" == inventory_hostname'
+  when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
   delegate_to: "{{ fanout_pubsub_nodes[inventory_hostname].host }}"
 
-- name: fetch dish stats to host
-  shell: scp -r {{ ansible_user }}@{{ ansible_host }}:/tmp/dish_stats_with__* /tmp/
-  when: '"prme2-k8s-node-120" == inventory_hostname'
+- name: fetch radio stats to host
+  shell: scp -r {{ ansible_user }}@{{ ansible_host }}:/tmp/radio_stats_with__* /tmp/
+  when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
   delegate_to: "{{ fanout_pubsub_nodes[inventory_hostname].host }}"
 
-- name: fetch dish stats to analyst host
-  shell: scp -r /tmp/dish_stats_with__* {{ pubsub_analyst_host }}:{{ pubsub_analyst_path }}/apps/pub/vms/fanout/{{ current_date_time.stdout }}
-  when: '"prme2-k8s-node-120" == inventory_hostname'
+- name: fetch radio stats to analyst host
+  shell: scp -r /tmp/radio_stats_with__* {{ pubsub_analyst_host }}:{{ pubsub_analyst_path }}/apps/pub/vms/fanout/{{ current_date_time.stdout }}
+  when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
   delegate_to: "{{ fanout_pubsub_nodes[inventory_hostname].host }}"
 
-- name: cleanup dish stats
-  shell: cd /tmp; rm -rf dish_stats_with__*
-  when: '"prme2-k8s-node-120" == inventory_hostname'
+- name: cleanup radio stats
+  shell: cd /tmp; rm -rf radio_stats_with__*
+  when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
   become: true
 
 - name: cleanup kvm stats
-  shell: cd /tmp; rm -rf dish_stats_with__*
-  when: '"prme2-k8s-node-120" == inventory_hostname'
+  shell: cd /tmp; rm -rf radio_stats_with__*
+  when: '"publisher" in fanout_pubsub_nodes[inventory_hostname].type'
   become: true
