--- a/apps/vmware/vars/zeromq_vms/configs/fanout/zeromq-1x1-2x1-3x1-7,8,9xnone.yml
+++ b/apps/vmware/vars/zeromq_vms/configs/fanout/zeromq-1x1-2x1-3x1-7,8,9xnone.yml
@@ -6,15 +6,15 @@ fanout_pub:
 
 fanout_pub_scheme:
 #  type: "baseerat" # type options: baseerat, unicast
-  type: "baseerat"
+  type: "unicast"
   baseerat:
     address: 192.168.200.200
     port: 12345
 
-fanout_pub_cmds: '' # e.g., msleep(1); or usleep(1);
+fanout_pub_cmds: 'msleep(1);' # e.g., msleep(1); or usleep(1);
 #fanout_pub_cmds: 'struct timespec req;req.tv_sec = 0;req.tv_nsec = 1L;nanosleep(&req, (struct timespec *)NULL);'
 
-fanout_sub_count_per_node: 1
+fanout_sub_count_per_node: 255
 
 fanout_pubsub_nodes:
   prme1-k8s-node-120:
@@ -38,4 +38,3 @@ fanout_pubsub_nodes:
     type: "subscriber"
     pub: "{{ fanout_pub }}"
     count: "{{ fanout_sub_count_per_node }}"
-
